--- a/style.css
+++ b/style.css
@@ -24,6 +24,24 @@ body{
     background : #f5f5f5;
     text-align: center;
 }
+.button{
+    background-color: #1565C0; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 16px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: #0D47A1;
+}
 
 .vs{
     text-align: center;
@@ -32,5 +50,5 @@ body{
 }
 
 img{
-    width: 50%;
+    width: 75%;
 }
