--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ body{
     background : #f5f5f5;
     text-align: center;
 }
+.pokemon-types{
+    color: blue;
+}
 .button{
     background-color: #1565C0; 
     border: none;
